# openpath-CANINE-middleware

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/CAMEL_SDK/: CMakeLists.txt
lib/CAMEL_SDK/include/CAMEL_SDK/: CAMEL_api.hpp  DataAnalysis.hpp  ENumClasses.hpp  Log.hpp  RBThread.h  SharedMemory.hpp  Thread.h
lib/CAMEL_SDK/include/CAMEL_SDK/MathTools/: Filter.hpp  FloatingBaseModel.hpp  RealTimeIntegrator.hpp  RobotMath.hpp
lib/CAMEL_SDK/include/CAMEL_SDK/MathTools/TrajectoryGenerator/: QuinticTrajectoryGenerator.hpp
lib/CAMEL_SDK/src/: Filter.cpp
lib/Console/: CMakeLists.txt  CommunicationClient.cpp  CommunicationClient.h  IndexNotation.h  ROSCommunication.cpp  ROSCommunication.hpp  SharedMemory.h  main.cpp  package.xml
lib/Console/gui/: MotorDialog.cpp  MotorDialog.h  MotorDialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/Console/gui/Qtplot/: qcustomplot.cpp
lib/Console/resources/: Operation.h  icons.qrc  stl.qrc
lib/Console/resources/configs/: BasicConfig.ini  BasicConfig_backup.ini
python_scripts/: canineStruct.py  main.py  pantiltManager.py  rosCommunication.py  sharedMemory.py  zedManager.py
python_scripts/heuichen/: image_capture.py  pantilt_read.py  pantilt_write.py
ros_pkg/canine_msgs_v2/: CMakeLists.txt  package.xml
ros_pkg/canine_msgs_v2/msg/: CANINECommand.msg  CANINEState.msg
scripts/: build_middleware.sh  build_ros_pkg.sh  canine_ht_slam.sh  orin setup  publish_lidar.sh  run_clion.sh  run_middleware.sh  run_python_script.sh  run_vscode.sh
